dependencies/charon/charon/tests/ui/associated_types/lift-assoc-ty-in-alias.rs
//@ known-failure
//@ charon-args=--lift-associated-types=*
pub trait HasAssoc {
    type Assoc;
}

pub type Alias<B> = <B as HasAssoc>::Assoc;
